--- a/_config.yml
+++ b/_config.yml
@@ -24,14 +24,15 @@ description: >- # this means to ignore newlines until "baseurl:"
   Research in programming language theory and formal verification.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
 github_username: eupp
 
 # Build settings
 remote_theme: pages-themes/midnight@v0.2.0
+markdown: GFM
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
